v0.14.1/_sources/generated/statsmodels.discrete.discrete_model.NegativeBinomial.rst.txt
statsmodels.discrete.discrete\_model.NegativeBinomial
=====================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: NegativeBinomial
   :exclude-members: cdf,cov_params_func_l1,fit,fit_regularized,from_formula,get_distribution,hessian,information,initialize,loglike,pdf,predict,score,score_obs,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~NegativeBinomial.cdf
      ~NegativeBinomial.cov_params_func_l1
      ~NegativeBinomial.fit
      ~NegativeBinomial.fit_regularized
      ~NegativeBinomial.from_formula
      ~NegativeBinomial.get_distribution
      ~NegativeBinomial.hessian
      ~NegativeBinomial.information
      ~NegativeBinomial.initialize
      ~NegativeBinomial.loglike
      ~NegativeBinomial.pdf
      ~NegativeBinomial.predict
      ~NegativeBinomial.score
      ~NegativeBinomial.score_obs
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~NegativeBinomial.endog_names
      ~NegativeBinomial.exog_names
   
   
   